syntax = "proto3";
package stafihub.stafihub.rstaking;

import "gogoproto/gogo.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/stafihub/stafihub/x/rstaking/types";

// Msg defines the Msg service.
service Msg {
  rpc SetInflationBase(MsgSetInflationBase) returns (MsgSetInflationBaseResponse);
  rpc AddValToWhitelist(MsgAddValToWhitelist) returns (MsgAddValToWhitelistResponse);
  rpc ToggleWhitelistSwitch(MsgToggleWhitelistSwitch) returns (MsgToggleWhitelistSwitchResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSetInflationBase {
  string creator = 1;
  string inflationBase = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

message MsgSetInflationBaseResponse {
}

message MsgAddValToWhitelist {
  string creator = 1;
  string valAddress = 2;
}

message MsgAddValToWhitelistResponse {
}

message MsgToggleWhitelistSwitch {
  string creator = 1;
}

message MsgToggleWhitelistSwitchResponse {
}

// this line is used by starport scaffolding # proto/tx/message